--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <section>
-        <div>
+        <div class="button">
             Get Dadvice
         </div>
     </section>
@@ -66,13 +66,44 @@
     </section>
 
     <section>
+        <p>
+            Low-effort activity ideas to suit your mood and budget
+        </p>
+        <img src="/static/penguin-1.jpg" alt="">
+    </section>
+    
+    <section>
         <img src="/static/penguin-2.jpg" alt="">
-        <p>Fast and clear answers </p>
-        <p>to most common parenting challenges </p>
+        <p>Fast and clear answers to most common parenting challenges</p>
     </section>
 
-    <footer>
+    <section>
+        <p><strong>Cliff-notes </strong> from top-rated parenting books (because who has the time to read the whole thing?)</p>
+        <img src="/static/penguin-3.jpg" alt="">
+    </section>
 
+    <section>
+        <img src="/static/penguin-4.jpg" alt="">
+        <p>Longer reads for the SuperDads out there</p>
+    </section>
+
+    <section>
+        <div class="button">
+            Sign up
+        </div>
+    </section>
+    <footer>
+        <ul>
+            <li>
+                Contact Us
+            </li>
+            <li>
+                Privacy
+            </li>
+            <li>
+                Terms
+            </li>
+        </ul>
     </footer>
     
 </body>
