--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
 
     <section>
 
-        <div class="logo">
+        <img src="/static/logo.jpg" alt="">
 
-        </div>
-
-        <div class="button">
+        <div class="loginButton">
             Login
         </div>
 
