--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </nav>
 
     <section>
-
-        <img src="/static/logo.jpg" alt="">
-
+        <div>
+            <img src="/static/logo.jpg" alt="">
+        </div>
         <div class="loginButton">
             Login
         </div>
@@ -32,9 +32,11 @@
     </section>
 
     <section>
-        <p>
-            A parenting coach in your pocket
-        </p>
+        <div>
+            <p>
+                A parenting coach in your pocket
+            </p>
+        </div>
     </section>
 
     <section>
@@ -43,17 +45,30 @@
         </div>
     </section>
     <section>
+        <div>
         <p>
             Most parenting resources are built with moms in mind. 
         </p>
-        <p>
-            We've created one for you, Dad!
-        </p>
-        <p>
-            We want to empower fathers to parent with confidence and enjoy more quality time with their kids.
-        </p>
+    </div>
+    
+    
     </section>
 
+    <section>
+        <div>
+            <p>
+                We've created one for you, Dad!
+            </p>
+        </div>
+
+    </section>
+    <section>
+        <div>
+            <p style="font-size: 20px;font-weight: 400">
+                We want to empower fathers to parent with confidence and enjoy more quality time with their kids.
+            </p>
+        </div>
+    </section>
     <section>
         <div class="button">
             Get Dadvice
