Centered text, added margins and changed spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </nav>
 
-    <section>
+    <section class="firstSection">
         <div>
             <img src="/static/logo.jpg" alt="">
         </div>
