--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p>Longer reads for the SuperDads out there</p>
     </section>
 
-    <section>
+    <section style="margin-bottom: 80px;">
         <div class="button">
             Sign up
         </div>
