Updated text styling and justfycontent = space between

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </nav>
 
-    <section class="firstSection">
+    <section>
         <div>
             <img src="/static/logo.jpg" alt="">
         </div>
@@ -100,17 +100,17 @@
     
     <section>
         <img src="/static/penguin-2.jpg" alt="">
-        <p>Fast and clear answers to most common parenting challenges</p>
+        <p>Fast and clear answers <span class="smallText">to most common parenting challenges</span></p>
     </section>
 
     <section>
-        <p><strong>Cliff-notes </strong> from top-rated parenting books (because who has the time to read the whole thing?)</p>
+        <p>Cliff-notes <span style="font-weight:lighter">from top-rated parenting books</span> <span style="font-size: 20px; font-weight: 100; font-style: italic;">(because who has the time to read the whole thing?)</span></p>
         <img src="/static/penguin-3.jpg" alt="">
     </section>
 
     <section>
         <img src="/static/penguin-4.jpg" alt="">
-        <p>Longer reads for the SuperDads out there</p>
+        <p>Longer reads <span style="font-weight: 300;"> for the SuperDads out there </span> </p>
     </section>
 
     <section style="margin-bottom: 80px;">
