Adjusted font sizes to match image closer

--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
             9:42
         <h2>
 
-        <div>
-            <img src="./static/phone icons.jpg" alt="">
-        <div>
+   
+        <img style="margin-right: 40px;" src="./static/phone icons.jpg" alt=""> 
 
     </nav>
 
     <section>
         <div>
-            <img src="/static/logo.jpg" alt="">
+            <img  src="/static/logo.jpg" alt="">
         </div>
         <div class="loginButton">
             Login
@@ -49,11 +48,11 @@
     </section>
     <section>
         <div>
-        <p>
+        <p style="font-size: 40px;">
             Most parenting resources are  
         
         </p>
-        <p>
+        <p style="font-size: 40px;">
             built with moms in mind.
         </p>
     </div>
@@ -63,7 +62,7 @@
 
     <section>
         <div>
-            <p class="blueText" style="font-size: 26px;">
+            <p class="blueText" style="font-size: 30px;">
                 We've created one for you, Dad!
             </p>
         </div>
