Changed nav and aligned some text to fit image better

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
 
         <h2>
-            9:42
+            9:41
         <h2>
 
    
@@ -91,7 +91,7 @@
     </section>
 
     <section>
-        <p>
+        <p class="centerText">
             Low-effort activity ideas <span class="smallText">to suit your mood and budget</span>
         </p>
         <img src="/static/penguin-1.jpg" alt="">
@@ -99,17 +99,17 @@
     
     <section>
         <img src="/static/penguin-2.jpg" alt="">
-        <p>Fast and clear answers <span class="smallText">to most common parenting challenges</span></p>
+        <p class="centerText">Fast and clear answers <span class="smallText">to most common parenting challenges</span></p>
     </section>
 
     <section>
-        <p>Cliff-notes <span style="font-weight:lighter">from top-rated parenting books</span> <span style="font-size: 20px; font-weight: 100; font-style: italic;">(because who has the time to read the whole thing?)</span></p>
+        <p class="centerText">Cliff-notes <span style="font-weight:lighter">from top-rated parenting books</span> <span style="font-size: 20px; font-weight: 100; font-style: italic;">(because who has the time to read the whole thing?)</span></p>
         <img src="/static/penguin-3.jpg" alt="">
     </section>
 
     <section>
         <img src="/static/penguin-4.jpg" alt="">
-        <p>Longer reads <span style="font-weight: 300;"> for the SuperDads out there </span> </p>
+        <p class="centerText">Longer reads <span style="font-weight: 300;"> for the SuperDads out there </span> </p>
     </section>
 
     <section style="margin-bottom: 80px;">
